--- a/boxfile.yml
+++ b/boxfile.yml
@@ -1,2 +1,23 @@
 run.config:
   engine: python
+  # add nodejs to the run environment
+  extra_packages:
+    - nodejs
+  # cache node_modules
+  cache_dirs:
+    - node_modules
+  # add node_module bins to the $PATH
+  extra_path_dirs:
+    - node_modules/.bin
+  # run yarn
+  extra_steps:
+    - yarn
+  extra_steps:
+    - npm install
+  # add nginx package
+  extra_packages:
+    - nginx
+
+# add a postgres database
+data.db:
+  image: nanobox/postgresql:9.5
